# voice-bot-gemini-baml

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  QUICK_START.md  README.md  SETUP.md  app.py  example_profile.json  modal.toml  pyproject.toml  requirements.txt
baml_src/: caller.baml  cars.baml  generators.baml  main.baml
src/: app.py  db.py  schemas.py  twilio_utils.py  utils.py  vllm_server.py  voice_agent.py
src/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py  watchers.py
tests/: __init__.py  test_app.py
